# SpacialMine

./: .gitignore  AGENTS.md  config.py  main.py  pyproject.toml  run_main.sbatch
agent/: __init__.py  tools.py
docs/: EXECUTOR_IMPLEMENTATION_PLAN.md
executor/: __init__.py  base.py  craft.py  debug_callbacks.py  dig.py  executor.py  gui.py  navigate.py  open_gui.py  place.py  smelt.py  steve.py  types.py  ws.py
scripts/: patch_minestudio.sh  run_main.sh
